--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <div id="no-results">No giveaways found matching your search.</div>
     </div>
     
+    <footer class="footer">
+        <p>Made with <span class="heart">♥</span> by <a href="https://techjeeper.com" target="_blank">TechJeeper</a> for the <a href="https://twitch.tv/mocomade" target="_blank">MoCo Community</a></p>
+    </footer>
+    
     <script src="app.js"></script>
 </body>
 </html> 
