--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <div class="loading-container">
         <div class="loading-spinner"></div>
-        <p>Loading giveaways...</p>
+        <p>Loading shops...</p>
     </div>
     
     <div class="table-container">
