--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <th>Winner</th>
                     <th>Twitch</th>
                     <th>Discord</th>
-                    <th><i class="fas fa-globe"></i></th>
+                    <th>Shop</th>
                     <th>Giveaway</th>
                     <th>Discount</th>
                     <th>Ships From</th>
