--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
         <div id="no-results">No giveaways found matching your search.</div>
     </div>
     
+    <!-- Modal for multiple website URLs -->
+    <div id="website-modal" class="website-modal">
+        <div class="website-modal-content">
+            <div class="website-modal-header">
+                <div class="website-modal-title">Website Links</div>
+                <button class="website-modal-close">&times;</button>
+            </div>
+            <ul id="website-list" class="website-list">
+                <!-- Links will be added dynamically -->
+            </ul>
+        </div>
+    </div>
+    
     <footer class="footer">
         <p>Made with <span class="heart">♥</span> by <a href="https://techjeeper.com" target="_blank">TechJeeper</a> for the <a href="https://twitch.tv/mocomade" target="_blank">MoCo Community</a></p>
     </footer>
